// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlternateBufferQuittingDisplay > renders with active and pending tool messages > with_history_and_pending 1`] = `
"██████╗ ███████╗██╗  ██╗
██╔══██╗██╔════╝██║  ██║
██║  ██║███████╗███████║
██║  ██║╚════██║██╔══██║
██████╔╝███████║██║  ██║
╚═════╝ ╚══════╝╚═╝  ╚═╝
TIPS
  › Use /btw to explore a side question in parallel.
  › Type @path/to/file to add focused context.
╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool1 Description for tool 1                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool2 Description for tool 2                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AlternateBufferQuittingDisplay > renders with empty history and no pending items > empty 1`] = `
"██████╗ ███████╗██╗  ██╗
██╔══██╗██╔════╝██║  ██║
██║  ██║███████╗███████║
██║  ██║╚════██║██╔══██║
██████╔╝███████║██║  ██║
╚═════╝ ╚══════╝╚═╝  ╚═╝
TIPS
  › Use /btw to explore a side question in parallel.
  › Type @path/to/file to add focused context."
`;

exports[`AlternateBufferQuittingDisplay > renders with history but no pending items > with_history_no_pending 1`] = `
"██████╗ ███████╗██╗  ██╗
██╔══██╗██╔════╝██║  ██║
██║  ██║███████╗███████║
██║  ██║╚════██║██╔══██║
██████╔╝███████║██║  ██║
╚═════╝ ╚══════╝╚═╝  ╚═╝
TIPS
  › Use /btw to explore a side question in parallel.
  › Type @path/to/file to add focused context.
╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool1 Description for tool 1                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────────────────────────╮
│ ✓  tool2 Description for tool 2                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`AlternateBufferQuittingDisplay > renders with pending items but no history > with_pending_no_history 1`] = `
"██████╗ ███████╗██╗  ██╗
██╔══██╗██╔════╝██║  ██║
██║  ██║███████╗███████║
██║  ██║╚════██║██╔══██║
██████╔╝███████║██║  ██║
╚═════╝ ╚══════╝╚═╝  ╚═╝
TIPS
  › Use /btw to explore a side question in parallel.
  › Type @path/to/file to add focused context."
`;
